RPN-35: fix according to review
