# nft/api/src/main/kotlin/com/rarible/protocol/nft/api/service/mint/BurnLazyNftValidator.kt
@@ -22,14 +22,14 @@ class BurnLazyNftValidator(
             ?: throw LazyItemNotFoundException(itemId)
 
         val mintCreators = lazyMint.creators.map { it.account }
-        val burnCreators = lazyNftDto.creators.map { it.account }
+        val burnCreators = lazyNftDto.creators
 
-        if (mintCreators != burnCreators) {
+        if (setOf(mintCreators) != setOf(burnCreators)) {
             throw BurnLazyNftIncorrectCreatorsException(itemId)
         }
 
         burnCreators.indices.forEach { i ->
-            val address = lazyNftDto.creators[i].account
+            val address = lazyNftDto.creators[i]
             val signature = lazyNftDto.signatures[i]
             val hash = Word(Hash.sha3(ERC1271SignService.addStart(msg).bytes()))
             val recovered = signService.recover(hash, signature)
